Removed SearchLicenses Fix #374
