# swagger.yml
@@ -3488,62 +3488,6 @@ paths:
         - api-service
         - fe-user
         - read
-  /licenses:
-    get:
-      parameters:
-        - in: query
-          name: mode
-          description: output mode
-          allowEmptyValue: true
-          example: full
-          schema:
-            type: string
-            readOnly: true
-            enum:
-              - full
-              - summary
-        - $ref: '#/components/parameters/sort-by'
-        - $ref: '#/components/parameters/sort-desc'
-        - $ref: '#/components/parameters/page'
-        - $ref: '#/components/parameters/size'
-        - $ref: '#/components/parameters/location'
-        - $ref: '#/components/parameters/environment'
-        - $ref: '#/components/parameters/older-than'
-      responses:
-        '200':
-          description: OK
-          headers: {}
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - type: array
-                    items:
-                      $ref: '#/components/schemas/LicenseCount'
-                  - type: object
-                    properties:
-                      content:
-                        type: array
-                        items:
-                          $ref: '#/components/schemas/LicenseCount'
-                      metadata:
-                        $ref: '#/components/schemas/PageMetadata'
-                    required:
-                      - content
-                      - metadata
-        '401':
-          $ref: '#/components/responses/error'
-        '422':
-          $ref: '#/components/responses/error'
-        '500':
-          $ref: '#/components/responses/error'
-      operationId: SearchLicenses
-      description: List licenses using the filters in the request
-      summary: Search a list of licenses
-      tags:
-        - api-service
-        - fe-user
-        - read
   '/licenses/{name}':
     get:
       operationId: GetLicense
